--- a/scss/base/_basic.scss
+++ b/scss/base/_basic.scss
@@ -10,7 +10,7 @@
 html {
   font-size: 50%;
   font-display: optional;
-  overflow: hidden;
+  overflow-x: hidden;
 
   @include respond(tab-port) {
     font-size: 62.5%;
@@ -23,7 +23,7 @@ body {
   font-family: "Lato", sans-serif;
   line-height: 1.5;
   min-height: 100vh;
-  overflow: hidden;
+  overflow-x: hidden;
   position: relative;
   width: 100%;
 }
